--- a/src/component/Common/Navigation.css
+++ b/src/component/Common/Navigation.css
@@ -1,5 +1,16 @@
+
+.container{
+    margin: 0;
+}
+
+.hover-cursor{
+    cursor: pointer;
+}
 .navbar{
-    background-color: black;
+    width: 100vw;
+    padding: 0;
+    /* border-bottom:solid 1px rgb(230, 230, 230); */
+    box-shadow:  0 1px 2px 0 rgba(219, 219, 219, 0.1);
 }
 
 .logo{
@@ -8,6 +19,19 @@
     width : 50px;
 }
 
+.profile-btn{
+    border-radius: .5em;
+    box-shadow:  2px 2px 20px 0 rgba(206, 206, 206, 0.5);
+    position: absolute;
+    width: 200px;
+    right: 1em;
+}
+
+@media screen and (max-width: 560px) {
+    .profile-btn{
+        right: 5em;
+    }
+  }
 
 .navpadding {
     padding-left : 35;
@@ -24,16 +48,16 @@
 
 .userdropdown{
     position : absolute;
-    height: 160px;
+    /* height: 100px; */
     width: 300px;
-    border-radius : 5px;
+    border-radius:1em !important;
     top : 60px;
     right: 25px;
     z-index: 100;
 }
 
 .uslink{
-    color: rgb(218, 206, 206);
+    color: rgb(199, 199, 199);
     font-size: 14px;
     font-weight: bold;
 }
@@ -55,12 +79,16 @@
 
 .logout{
     color: white;
-    height : 50%;
+    height : 30%;
     width : 100%;
-    background-color: rgb(164, 240, 94);
+    background-color: rgb(54, 54, 54);
     box-sizing: border-box;
-    border-bottom-left-radius: 10px;
-    border-bottom-right-radius: 10px;
+    border-radius:0 0 1em 1em;
+    box-shadow: 5px 5px 20px rgb(209, 209, 209);
+}
+.logout:hover{
+    color: white;
+    background-color: rgb(216, 37, 31);
 }
 
 .iconsize{
@@ -68,16 +96,23 @@
 }
 
 .iconsizelog{
-    font-size : 30px;
+    font-size : 18px;
 }
 
 .padding{
     padding : 10px;
 }
 
+.nlink{
+    color: rgb(49, 49, 49);
+    font-weight: 500;
+}
 .nlink:hover{
-    background-color: red;
+    /* border-bottom: solid 1em rgb(173, 173, 173); */
     opacity: 1 ;
+    color: rgb(11, 93, 121);
+    background-color: rgb(238, 238, 238);
+    border-radius: .5em;
 }
 
 .marginzero{
