--- a/src/component/Common/Navigation.css
+++ b/src/component/Common/Navigation.css
@@ -1,37 +1,61 @@
 
+:root {
+    --grey: #6b6b6b;
+    --light-grey: #e4e4e4;
+    --white: #ffffff;
+  }
+
 .container{
     margin: 0;
 }
 
+.grey{
+    color: var(--grey);
+}
+.red{
+    color: rgb(204, 12, 12);
+}
 .hover-cursor{
     cursor: pointer;
 }
 .navbar{
-    width: 100vw;
-    padding: 0;
-    /* border-bottom:solid 1px rgb(230, 230, 230); */
-    box-shadow:  0 1px 2px 0 rgba(219, 219, 219, 0.1);
+    display: flex;
+    justify-content: center;
+    background-color: var(--white) !important;
+    box-shadow:  0 1px 1px 0 rgba(219, 219, 219, 0.4);
 }
 
+.logo-cover{
+    height : 50px;
+    width : 50px;
+    border-radius: 5em;
+    box-shadow:  2px 2px 10px 0 rgba(179, 179, 179, 0.5);
+
+}
 .logo{
     background : url("../../assets/niko.png");
     height : 50px;
     width : 50px;
 }
 
+
 .profile-btn{
+    padding: 0em  1em;
     border-radius: .5em;
-    box-shadow:  2px 2px 20px 0 rgba(206, 206, 206, 0.5);
-    position: absolute;
-    width: 200px;
-    right: 1em;
+    align-self: center;
+    box-shadow:  2px 2px 10px 0 rgba(223, 223, 223, 0.5);
+    border: .01em solid var(--light-grey);
+    transition: .2s ease;
+}
+.profile-btn:hover{
+    transform: scale(1.1);
+    padding: 0em  1em;
+    border-radius: .5em;
+    align-self: center;
+    box-shadow:  2px 2px 10px 0 rgba(223, 223, 223, 0.5);
+    border: .01em solid var(--light-grey);
 }
 
-@media screen and (max-width: 560px) {
-    .profile-btn{
-        right: 5em;
-    }
-  }
 
 .navpadding {
     padding-left : 35;
@@ -61,6 +85,7 @@
     font-size: 14px;
     font-weight: bold;
 }
+
 .uslinklog{
     color: white;
     font-size: 18px;
@@ -84,7 +109,6 @@
     background-color: rgb(54, 54, 54);
     box-sizing: border-box;
     border-radius:0 0 1em 1em;
-    box-shadow: 5px 5px 20px rgb(209, 209, 209);
 }
 .logout:hover{
     color: white;
@@ -118,4 +142,13 @@
 .marginzero{
     margin: 0px;
     padding : 0px;
+}
+
+
+div[role='menu'] {
+    visibility: hidden;
+}
+
+div[role='menu'].visible {
+    visibility: visible;
 }
